# sae-deception-multiagent-rag-pro

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  SETUP.md  paper_field_map.html  pyproject.toml  requirements.txt
app/: streamlit_app.py
configs/: default.yaml
docs/: ASSUMPTIONS.md  PRE_MORTEM.md  SAFETY_EXAMPLES_NOTES.md  project_explainer.html
experiments/260529_test01_wikipedia_contamination/: notes.md  run_test.py
experiments/260605_phase5_probe_derisk/: 50pct_milestone_onepager.html  SUMMARY.md  epistemic_status.md  metrics.json  phase6_ablation.json  pipeline_results.json  results.md  run_manifest.json
scripts/: init_repo.sh  plot_results.py  run_experiment.py  run_phase6.py
src/sae_deception/: __init__.py  config.py  experiment.py
src/sae_deception/attacks/: corpus.py
src/sae_deception/interp/: ablate.py  represent.py
src/sae_deception/pipeline/: graph.py  rag.py  state.py
src/sae_deception/probes/: train.py
tests/: test_ablate.py  test_derisk.py  test_graph.py
